<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonarsource.parent</groupId>
    <artifactId>parent</artifactId>
    <version>84.0.0.3027</version>
  </parent>

  <groupId>org.sonarsource.sonarqube-plugins.cxx</groupId>
  <artifactId>cxx</artifactId>
  <version>2.2.2-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Cxx</name>
  <url>https://github.com/SonarOpenCommunity/sonar-cxx</url>
  <inceptionYear>2010</inceptionYear>
  <organization>
    <name>SonarOpenCommunity</name>
    <url>https://github.com/SonarOpenCommunity</url>
  </organization>
  <licenses>
    <license>
      <name>GNU LGPL 3</name>
      <url>http://www.gnu.org/licenses/lgpl.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>guwirth</id>
      <name>Günter Wirth</name>
    </developer>
    <developer>
      <id>wenns</id>
      <name>Waleri Enns</name>
    </developer>
    <developer>
      <name>Francois Dorin</name>
    </developer>
    <developer>
      <id>jmecosta</id>
      <name>Jorge Costa</name>
    </developer>
    <developer>
      <name>Vincent Hardion</name>
    </developer>
    <developer>
      <name>Mathias Cocheril</name>
    </developer>
    <developer>
      <name>JP Chemali</name>
    </developer>
    <developer>
      <name>Sylvain Hellegouarch</name>
    </developer>
    <developer>
      <name>Przemyslaw Kociolek</name>
    </developer>
    <developer>
      <name>Patrick Gansterer</name>
    </developer>
    <developer>
      <id>Bertk</id>
      <name>Bert Kandert</name>
    </developer>
    <developer>
      <name>Wolfgang Buckel</name>
    </developer>
    <developer>
      <name>keithmarsh</name>
    </developer>
    <developer>
      <id>Typz</id>
      <name>Francois Ferrand</name>
    </developer>
    <developer>
      <id>lcintrat</id>
      <name>Ludovic Cintrat</name>
    </developer>
    <developer>
      <id>Zetten</id>
      <name>Peter van Zetten</name>
    </developer>
    <developer>
      <id>cbagwell</id>
      <name>Chris Bagwell</name>
    </developer>
    <developer>
      <id>mjdetullio</id>
      <name>Matthew DeTullio</name>
    </developer>
    <developer>
      <id>felipebz</id>
      <name>Felipe Zorzo</name>
    </developer>
    <developer>
      <id>selltc</id>
      <name>selltc</name>
    </developer>
    <developer>
      <id>wichtounet</id>
      <name>Baptiste Wicht</name>
    </developer>
    <developer>
      <id>arnaudsylvestre</id>
      <name>Arnaud SYLVESTRE</name>
    </developer>
    <developer>
      <id>BobSilent</id>
      <name>BobSilent</name>
    </developer>
    <developer>
      <id>Kochise</id>
      <name>Kochise</name>
    </developer>
    <developer>
      <id>gyorb</id>
      <name>gyorb</name>
    </developer>
    <developer>
      <id>nathanaelg</id>
      <name>nathanaelg</name>
    </developer>
    <developer>
      <id>gena01</id>
      <name>gena01</name>
    </developer>
    <developer>
      <id>MarcAntoineCRUE</id>
      <name>MarcAntoineCRUE</name>
    </developer>
    <developer>
      <id>Pasick</id>
      <name>Pasick</name>
    </developer>
    <developer>
      <id>stefanweiser</id>
      <name>stefanweiser</name>
    </developer>
    <developer>
      <id>ericlemes</id>
      <name>Eric Lemes</name>
    </developer>
    <developer>
      <id>ivangalkin</id>
      <name>ivangalkin</name>
    </developer>
    <developer>
      <id>rufinio</id>
      <name>rufinio</name>
    </developer>
    <developer>
      <id>moriarty</id>
      <name>Alex Moriarty</name>
    </developer>
    <developer>
      <id>bloodlee</id>
      <name>Bloodlee</name>
    </developer>
    <developer>
      <id>rudolfgrauberger</id>
      <name>Rudolf Grauberger</name>
    </developer>
    <developer>
      <id>stalb</id>
      <name>Stéphane Talbot</name>
    </developer>
    <developer>
      <id>tisoft</id>
      <name>Markus Heberling</name>
    </developer>
    <developer>
      <id>cmorve-te</id>
      <name>Cristian Morales Vega</name>
    </developer>
    <developer>
      <id>agebert</id>
      <name>Alfred Gebert</name>
    </developer>
    <developer>
      <id>Nekto89</id>
      <name>Marian Klymov</name>
    </developer>
    <developer>
      <id>jenspopp</id>
      <name>jenspopp</name>      
    </developer>
    <developer>
      <id>opajonk</id>
      <name>Oliver Pajonk</name>
    </developer>
    <developer>
      <id>smileQiny</id>
      <name>Smile Qy</name>
    </developer>
    <developer>
      <id>kragens</id>
      <name>kragens</name>
    </developer>
  </developers>

  <contributors>
    <contributor>
      <name>Adam Romanek</name>
      <email>aromanek.contractor@libertyglobal.com</email>
      <organization>Liberty Global B.V.</organization>
      <organizationUrl>https://www.libertyglobal.com</organizationUrl>
      <timezone>Europe/Warsaw</timezone>
    </contributor>
  </contributors>

  <modules>
    <module>cxx-sslr</module>
    <module>cxx-squid-bridge</module>
    <module>cxx-squid</module>
    <module>cxx-checks</module>
    <module>cxx-sensors</module>
    <module>cxx-sslr-toolkit</module>
    <module>sonar-cxx-plugin</module>
    <module>integration-tests</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:SonarOpenCommunity/sonar-cxx.git</connection>
    <developerConnection>https://github.com/SonarOpenCommunity/sonar-cxx</developerConnection>
    <url>https://github.com/SonarOpenCommunity/sonar-cxx</url>
    <tag>HEAD</tag>
  </scm>
  <issueManagement>
    <system>Git</system>
    <url>https://github.com/SonarOpenCommunity/sonar-cxx/issues?state=open</url>
  </issueManagement>
  <ciManagement>
    <system>GitHub Actions</system>
    <url>https://github.com/SonarOpenCommunity/sonar-cxx/actions</url>
  </ciManagement>

  <properties>
    <license.title>C++ Community Plugin (cxx plugin)</license.title>
    <license.owner>SonarOpenCommunity</license.owner>
    <license.mailto>http://github.com/SonarOpenCommunity/sonar-cxx</license.mailto>
    <license.years>2010-2025</license.years>
    <license.name>GNU LGPL v3</license.name>

    <!-- properties for SonarQube Cloud analysis -->
    <sonar.organization>sonaropencommunity</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>

    <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
    <sonar.artifact.path>target/${project.artifactId}-${project.version}.jar</sonar.artifact.path>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <animal.sniffer.skip>true</animal.sniffer.skip>
    <aggregate.report.dir>integration-tests/target/site/jacoco-aggregate/jacoco.xml</aggregate.report.dir>

    <!-- we depend on API ${sonar.plugin.api.version} but we keep backward compatibility to SonarQube Server LTS
         !!!Change below only if this changes for LTS version: https://github.com/SonarSource/sonar-plugin-api!!!
           
         The API version is stable for the lifetime of the LTA as the Sonar Plugin API is developed
         alongside newer versions of the Sonar products and changes / fixes are only backported
         to the LTA - but no (breaking) changes to the Sonar Plugin API. -->
    <sonar.version>25.1.0.102122</sonar.version>
    <sonar.plugin.api.version>11.1.0.2693</sonar.plugin.api.version>
    <pluginApiMinVersion>9.14.0.375</pluginApiMinVersion>

    <!-- dependencies -->
    <ant.version>1.10.14</ant.version>
    <asm.version>9.9.1</asm.version>
    <assertj-core.version>3.27.7</assertj-core.version>
    <commons-io.version>2.21.0</commons-io.version>
    <commons-lang.version>2.6</commons-lang.version>
    <cucumber.version>2.0.1</cucumber.version>
    <dd-plist.version>1.28</dd-plist.version>
    <gherkin.version>38.0.0</gherkin.version>
    <gson.version>2.13.2</gson.version>
    <guava.version>33.5.0-jre</guava.version>
    <jackson-databind.version>2.21.0</jackson-databind.version>
    <jaxen.version>2.0.0</jaxen.version>
    <jdom2.version>2.0.6.1</jdom2.version>
    <jsr305.version>3.0.2</jsr305.version>
    <junit-jupiter.version>6.0.2</junit-jupiter.version>
    <mockito-all.version>1.10.19</mockito-all.version>
    <mockito-core.version>5.21.0</mockito-core.version>
    <sonar-colorizer.version>5.1</sonar-colorizer.version>
    <staxmate.version>2.4.1</staxmate.version>
    <stax2-api.version>4.2.2</stax2-api.version>
    <tag-expressions.version>9.0.0</tag-expressions.version>
    <woodstox-core.version>7.1.1</woodstox-core.version>

    <!-- plugins -->
    <java.version>17</java.version>
    <jython-standalone.version>2.7.4</jython-standalone.version>
    <lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
    <maven-compiler.version>3.15.0</maven-compiler.version>
    <maven-dependency.version>3.9.0</maven-dependency.version>
    <maven-jacoco.version>0.8.14</maven-jacoco.version>
    <maven-jar.version>3.5.0</maven-jar.version>
    <maven-license.version>5.0.0</maven-license.version>
    <maven-project.version>2.2.1</maven-project.version>
    <maven-python-test.version>1.0</maven-python-test.version>
    <maven-shade.version>3.6.1</maven-shade.version>
    <maven-sonar.version>5.5.0.6356</maven-sonar.version>

  </properties>

  <dependencyManagement>
    <dependencies>

      <dependency>
        <groupId>org.sonarsource.api.plugin</groupId>
        <artifactId>sonar-plugin-api</artifactId>
        <version>${sonar.plugin.api.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.api.plugin</groupId>
        <artifactId>sonar-plugin-api-test-fixtures</artifactId>
        <version>${sonar.plugin.api.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarqube</groupId>
        <artifactId>sonar-plugin-api-impl</artifactId>
        <version>${sonar.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarqube</groupId>
        <artifactId>sonar-testing-harness</artifactId>
        <version>${sonar.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>2.0.17</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.5.29</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-lang</groupId>
        <artifactId>commons-lang</artifactId>
        <version>${commons-lang.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit-jupiter.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj-core.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito-core.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-project</artifactId>
        <version>${maven-project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.ant</groupId>
        <artifactId>ant</artifactId>
        <version>${ant.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jdom</groupId>
        <artifactId>jdom2</artifactId>
        <version>${jdom2.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>${jsr305.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>${gson.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <!-- To define the plugin version in your parent POM -->
    <pluginManagement>
      <plugins>
        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>${lifecycle-mapping.version}</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>com.mycila.maven-license-plugin</groupId>
                    <artifactId>maven-license-plugin</artifactId>
                    <versionRange>[1.9.0,)</versionRange>
                    <goals>
                      <goal>check</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore></ignore>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
        <plugin>
          <groupId>com.mycila</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>${maven-license.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler.version}</version>
          <configuration>
            <encoding>UTF-8</encoding>
            <showDeprecation>true</showDeprecation>
            <release>${java.version}</release>
            <debug>true</debug>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>${maven-dependency.version}</version>
        </plugin>
        <plugin>
          <groupId>org.sonarsource.scanner.maven</groupId>
          <artifactId>sonar-maven-plugin</artifactId>
          <version>${maven-sonar.version}</version>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>${maven-jacoco.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <!-- To use the plugin goals in your POM or parent POM -->
    <plugins>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.4</version>
        <configuration>
          <argLine>
            @{argLine}
            --add-opens=java.base/java.lang=ALL-UNNAMED
            --add-opens=java.base/java.util=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>    </plugins>
  </build>
  <!-- BEGIN: Specific to mapping unit tests and covered code -->
  <profiles>
    <profile>
      <id>coverage</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>prepare-agent</id>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
